FH-35 | Add http interceptor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "ES2022",
       "dom"
     ],
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
