--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "dayjs": "^1.11.10",
     "firebase": "^10.7.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
